Bug 246431 - Channel Settings column widths not remembered after restarting konversation
Summary: Channel Settings column widths not remembered after restarting konversation
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-01 15:51 UTC by DrSlony
Modified: 2010-08-02 03:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description DrSlony 2010-08-01 15:51:44 UTC
Version:           1.3.1 (using KDE 4.4.5) 
OS:                Linux

The column widths in the channel settings window are not remembered when you restart konversation.

Reproducible: Always

Steps to Reproduce:
1- Adjust column widths in the Channel Settings window so e.g. you can see the whole host mask of a ban and the time it was set.
2- Restart Konversation. 
3- Open the Channel Settings window again, and you have to resize them all over again.

Actual Results:  
Column widths not remembered.

Expected Results:  
Column widths remembered.
Comment 1 Eike Hein 2010-08-02 03:25:02 UTC
commit a9a1c8b0b21934743fe6a459454267a098fa2b41
Author: Eike Hein <hein@kde.org>
Date:   Mon Aug 2 03:25:05 2010 +0200

    Carry ban list column state across sessions.
    
    BUG:246431

diff --git a/ChangeLog b/ChangeLog
index c0aaa8f..489bf13 100644
--- a/ChangeLog
+++ b/ChangeLog
@@ -87,6 +87,8 @@ Changes since 1.3.1:
     ceive chat text messages that have the frontmost eligible tab as their
     recipient despite it not actually possessing the means to display them,
     resulting in a crash when such a message occured.
+* The widths of the columns and the sort column and direction in the Channel
+  Option dialog's ban list are now remembered across application restarts.
 
 
 Changes from 1.3 to 1.3.1:
diff --git a/src/irc/channeloptionsdialog.cpp b/src/irc/channeloptionsdialog.cpp
index 48dc9ba..88930e0 100644
--- a/src/irc/channeloptionsdialog.cpp
+++ b/src/irc/channeloptionsdialog.cpp
@@ -92,10 +92,13 @@ namespace Konversation
         refreshModes();
 
         setInitialSize(QSize(450, 380));
+
+        Preferences::restoreColumnState(m_ui.banList, "BanList ViewSettings");
     }
 
     ChannelOptionsDialog::~ChannelOptionsDialog()
     {
+        Preferences::saveColumnState(m_ui.banList, "BanList ViewSettings");
     }
 
     void ChannelOptionsDialog::changeOptions()