Carry ban list column state across sessions.

BUG:246431